--- a/src/main/resources/templates/footer.html
+++ b/src/main/resources/templates/footer.html
@@ -6,8 +6,8 @@
     <meta name="description" content="">
     <meta name="author" charset="PARK GI-PYO">
     <title>project-lottery</title>
-    <link href="/css/common.css" rel="stylesheet">
-    <link href="/css/footer.css" rel="stylesheet">
+    <link href="/css/common.css?v=20230525" rel="stylesheet">
+    <link href="/css/footer.css?v=20230525" rel="stylesheet">
 </head>
 <body>
 <footer>
@@ -28,6 +28,6 @@
     <!-- END 컨텐츠 -->
 </footer>
 <script src="https://kit.fontawesome.com/9f7c487e95.js" crossorigin="anonymous"></script>
-<script type="text/javascript" src="/js/footer.js"></script>
+<script type="text/javascript" src="/js/footer.js?v=20230525"></script>
 </body>
 </html>
