--- a/src/main/resources/templates/header.html
+++ b/src/main/resources/templates/header.html
@@ -7,8 +7,8 @@
     <meta name="author" charset="PARK GI-PYO">
     <title>project-lottery</title>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/css/bootstrap.min.css" rel="stylesheet">
-    <link href="/css/common.css" rel="stylesheet">
-    <link href="/css/header.css" rel="stylesheet">
+    <link href="/css/common.css?v=20230525" rel="stylesheet">
+    <link href="/css/header.css?v=20230525" rel="stylesheet">
 </head>
 <body>
 <header>
@@ -106,6 +106,6 @@
 <script src="https://kit.fontawesome.com/9f7c487e95.js" crossorigin="anonymous"></script>
 <script src="https://code.jquery.com/jquery-3.6.0.min.js" crossorigin="anonymous"></script>
 <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/js/bootstrap.bundle.min.js"></script>
-<script type="text/javascript" src="/js/header.js"></script>
+<script type="text/javascript" src="/js/header.js?v=20230525"></script>
 </body>
 </html>
