--- a/src/main/resources/templates/shop/shopDetail.html
+++ b/src/main/resources/templates/shop/shopDetail.html
@@ -7,10 +7,10 @@
     <meta name="author" charset="PARK GI-PYO">
     <title>project-lottery</title>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/css/bootstrap.min.css" rel="stylesheet">
-    <link href="/css/common.css" rel="stylesheet">
-    <link href="/css/header.css" rel="stylesheet">
-    <link href="/css/footer.css" rel="stylesheet">
-    <link href="/css/shop/shopDetail.css" rel="stylesheet">
+    <link href="/css/common.css?v=20230525" rel="stylesheet">
+    <link href="/css/header.css?v=20230525" rel="stylesheet">
+    <link href="/css/footer.css?v=20230525" rel="stylesheet">
+    <link href="/css/shop/shopDetail.css?v=20230525" rel="stylesheet">
 </head>
 <body>
 <header id="header">
@@ -214,9 +214,9 @@
 <script src="https://code.jquery.com/jquery-3.6.0.min.js" crossorigin="anonymous"></script>
 <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/js/bootstrap.bundle.min.js"></script>
 <script type="text/javascript" id="js-kakao-map"></script>
-<script type="text/javascript" src="/js/shop/shopDetailMap.js"></script>
-<script type="text/javascript" src="/js/footer.js"></script>
-<script type="text/javascript" src="/js/header.js"></script>
+<script type="text/javascript" src="/js/shop/shopDetailMap.js?v=20230525"></script>
+<script type="text/javascript" src="/js/footer.js?v=20230525"></script>
+<script type="text/javascript" src="/js/header.js?v=20230525"></script>
 <footer id="footer">
     <hr>
     footer 삽입부
