[fix] #180 - safari 렌더링 이슈 조치 (로또조합 페이지)
safari 브라우저에서 로또조합 생성 시, 렌더링이 이상하게 되는 문제를 발견했다.
css 디자인 문제로 파악되어, 수정했다.

--- a/src/main/resources/static/css/lotto/lottoTool.css
+++ b/src/main/resources/static/css/lotto/lottoTool.css
@@ -94,13 +94,6 @@
     color: white;
 }
 
-.game-grid {
-    display: flex;
-    flex-direction: column;
-    gap: 5px;
-    margin-top: 5px;
-}
-
 .game-numbers {
     width: 100%;
     border-radius: 5px;
@@ -112,6 +105,7 @@
     align-content: center;
     justify-items: center;
     gap: 5px;
+    margin: 5px 0;
 }
 
 .game-numbers .label-mini-title {
